--- a/tasks/Day26/kind-cni.yaml
+++ b/tasks/Day26/kind-cni.yaml
@@ -1,11 +1,13 @@
 kind: Cluster
 apiVersion: kind.x-k8s.io/v1alpha4
-name: cka-course
+name: kind-cni
 nodes:
 - role: control-plane
   extraPortMappings:
-    - containerPort: 30001
-      hostPort: 30001
+  - containerPort: 30001
+    hostPort: 30001
 - role: worker
 - role: worker
-- role: worker
+networking:
+  disableDefaultCNI: true
+  podSubnet: 192.168.0.0/16
